--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@babel/polyfill": "^7.11.5",
     "axios": "^0.26.1",
     "bootstrap": "^4.5.2",
+    "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.8.3",
+    "moment": "^2.29.2",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
