--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.14",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
