--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "axios": "^0.26.1",
     "bootstrap": "^4.5.2",
     "bootstrap-icons-vue": "^1.8.1",
